--- a/Redmine.Client.Ui/packages.config
+++ b/Redmine.Client.Ui/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac.Wp7" version="2.4.5.725" />
+  <package id="MvvmLightLibs" version="3.1.1" />
+  <package id="Rx-Main" version="1.0.11226" />
   <package id="SilverlightToolkitWP" version="4.2011.12.13" />
 </packages>
