--- a/Redmine.Client.Ui/packages.config
+++ b/Redmine.Client.Ui/packages.config
@@ -4,4 +4,5 @@
   <package id="MvvmLightLibs" version="3.1.1" />
   <package id="Rx-Main" version="1.0.11226" />
   <package id="SilverlightToolkitWP" version="4.2011.12.13" />
+  <package id="System.Threading.Tasks" version="2.1.2" />
 </packages>
