Added missing files to the project.

--- a/Redmine.Client.Ui/Redmine.Client.Ui.csproj
+++ b/Redmine.Client.Ui/Redmine.Client.Ui.csproj
@@ -100,12 +100,14 @@
     <Compile Include="Controls\Header.xaml.cs">
       <DependentUpon>Header.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\NotifyingModelBase.cs" />
-    <Compile Include="Models\NotifyingModelBaseExtensions.cs" />
     <Compile Include="Models\ProjectDetailsViewModel.cs" />
     <Compile Include="Models\MainViewModel.cs" />
     <Compile Include="Models\SettingsViewModel.cs" />
-    <Compile Include="Models\TrackingChangesModel.cs" />
+    <Compile Include="Mvvm\NotificationObject.cs" />
+    <Compile Include="Mvvm\NotifyingModelBase.cs" />
+    <Compile Include="Mvvm\NotifyingModelBaseExtensions.cs" />
+    <Compile Include="Mvvm\PropertySupport.cs" />
+    <Compile Include="Mvvm\TrackingChangesModel.cs" />
     <Compile Include="Pages\ProjectDetails.xaml.cs">
       <DependentUpon>ProjectDetails.xaml</DependentUpon>
     </Compile>
@@ -115,9 +117,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SampleData\MainViewModelDesignData\MainViewModelDesignData.xaml.cs">
-      <DependentUpon>MainViewModelDesignData.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -130,7 +129,6 @@
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
-    <DesignTimeOnly Include="SampleData\MainViewModelDesignData\MainViewModelDesignData.xsd" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\appbar.add.rest.png">
@@ -247,20 +245,12 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\ResourceDictionary1.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Pages\Settings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Main.xaml">
       <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="SampleData\MainViewModelDesignData\MainViewModelDesignData.xaml">
-      <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\PageStyles.xaml">
